Replace qspi flash driver with SFDP based driver

--- a/openocd.conf
+++ b/openocd.conf
@@ -1,5 +1,7 @@
 source [find interface/cmsis-dap.cfg]
+transport select swd
  
+
 set CHIPNAME at91same70q20
 source [find target/atsamv.cfg]
   
@@ -13,6 +15,8 @@ init
 targets
 reset halt
 flash write_image erase xboot.bin 0x400000 verify reset
-atsamv gpnvm set 1
+atsamv gpnvm set 1 
+atsamv gpnvm clr 7 
+atsamv gpnvm clr 8 
 reset
 shutdown
